fix(widgets/ui/ProductDetails): layout items alignment

--- a/widgets/ui/ProductDetails/ProductDetails.module.css
+++ b/widgets/ui/ProductDetails/ProductDetails.module.css
@@ -1,6 +1,7 @@
 .layout {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  align-items: center;
   gap: 2.7rem;
 }
 
